# mentor_ai

./: .env  .env.example  Dockerfile  check.py  create_db.py  create_structure.ps1  deploy.py  deploy2.py  diag.py  docker-compose.yml  drop_enum.py  pyproject.toml  remote_env_fix.py  requirements.txt
alembic/: env.py
alembic/versions/: 08c7bba6c0db_create_users_table.py  0a615c5e56ec_create_submissions_table.py  42a0b74eb634_create_ai_results_table.py  5913c06e7603_create_group_members_table.py  84f2628391a1_create_homeworks_table.py  9a8f3b3c672a_create_groups_table.py
app/: main.py
app/api/: deps.py
app/api/v1/: ai_results.py  auth.py  group_members.py  groups.py  homeworks.py  router.py  submissions.py  users.py
app/core/: config.py  exceptions.py  security.py
app/db/: base.py  init_db.py  session.py
app/models/: ai_result.py  base_model.py  group.py  group_member.py  homework.py  submission.py  user.py
app/schemas/: ai_result.py  auth.py  base.py  group.py  group_member.py  homework.py  submission.py  user.py
app/services/: ai_result_service.py  auth_service.py  file_service.py  gemini_service.py  group_member_service.py  group_service.py  homework_service.py  permission_service.py  submission_service.py  user_service.py
tests/: conftest.py  test_ai_results.py  test_auth.py  test_group_members.py  test_groups.py  test_homeworks.py  test_submissions.py
