[tool.poetry]
name = "men-mentor"
version = "0.1.0"
description = "AI-powered ta'lim platformasi"
authors = ["Men Mentor Team"]
readme = "README.md"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 88
select = ["E", "F", "I"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
strict = false
